--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -78,16 +78,6 @@ main {
   border-color: #6c5ce7;
 }
 
-.choice.selected {
-  background: #6c5ce7;
-  color: white;
-  border-color: #6c5ce7;
-}
-
-#result {
-  display: none;
-}
-
 .temoignage {
   background: #fff;
   padding: 20px;
@@ -102,76 +92,63 @@ footer {
   margin-top: 30px;
 }
 </style>
-  <script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 </head>
 
 <body>
 
 <header>
 <h1>Diagnostic Digitalisation</h1>
-<p>Évaluez votre maturité digitale et identifiez vos leviers de performance</p>
+<p>Évaluez votre maturité digitale et vos leviers de performance</p>
 </header>
 
 <main>
 
 <div class="card">
 
-<div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-<div class="counter" id="counter"></div>
+  <div class="progress">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
 
-<div class="question" id="question"></div>
-<div id="choices"></div>
+  <div class="counter" id="counter"></div>
 
-<div id="result"></div>
+  <div class="question" id="question"></div>
+  <div id="choices"></div>
+
+  <div id="result"></div>
 
 </div>
 
 <div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
-  Passage au diagnostic suivant (<strong>Crédit</strong>) dans <strong><span id="countdown">4</span>s</strong>…
+  Passage au diagnostic suivant (<strong>Crédit</strong>) dans
+  <strong><span id="countdown">4</span>s</strong>…
 </div>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#00b894;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
+<a href="../index.html"
+   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#00b894;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+← Retour à l'accueil
+</a>
 </footer>
 
 </main>
 
 <script>
 const questions = [
-  {
-    text: "Disposez-vous d’un ERP ou CRM centralisé ?",
-    weight: 15
-  },
-  {
-    text: "Vos outils métiers sont-ils interconnectés ?",
-    weight: 15
-  },
-  {
-    text: "Proposez-vous une expérience digitale fluide à vos clients ?",
-    weight: 20
-  },
-  {
-    text: "Votre site permet-il des actions concrètes comme RDV, devis, paiement ?",
-    weight: 15
-  },
-  {
-    text: "Disposez-vous d’une stratégie de marketing digital formelle ?",
-    weight: 15
-  },
-  {
-    text: "Utilisez-vous les réseaux sociaux de manière structurée et planifiée ?",
-    weight: 10
-  },
-  {
-    text: "Avez-vous automatisé certaines tâches (facturation, relances, reporting) ?",
-    weight: 10
-  }
+  { text: "Disposez-vous d’un ERP ou CRM centralisé ?", weight: 15 },
+  { text: "Vos outils métiers sont-ils interconnectés ?", weight: 15 },
+  { text: "Proposez-vous une expérience digitale fluide à vos clients ?", weight: 20 },
+  { text: "Votre site permet-il des actions concrètes (RDV, devis, paiement) ?", weight: 15 },
+  { text: "Disposez-vous d’une stratégie de marketing digital formelle ?", weight: 15 },
+  { text: "Utilisez-vous les réseaux sociaux de manière structurée ?", weight: 10 },
+  { text: "Avez-vous automatisé certaines tâches clés (facturation, relances, reporting) ?", weight: 10 }
 ];
 
 let index = 0;
-let score = 0;
+let totalScore = 0;
+let answers = [];
 
 const questionEl = document.getElementById("question");
 const choicesEl = document.getElementById("choices");
@@ -181,8 +158,8 @@ const resultEl = document.getElementById("result");
 
 function loadQuestion() {
   const q = questions[index];
-  questionEl.innerText = q.text;
-  counter.innerText = `Question ${index + 1} / ${questions.length}`;
+  questionEl.textContent = q.text;
+  counter.textContent = `Question ${index + 1} / ${questions.length}`;
   progressBar.style.width = `${(index / questions.length) * 100}%`;
   choicesEl.innerHTML = "";
 
@@ -193,12 +170,19 @@ function loadQuestion() {
   ].forEach(opt => {
     const btn = document.createElement("button");
     btn.className = "choice";
-    btn.innerText = opt.label;
+    btn.textContent = opt.label;
     btn.onclick = () => {
-      score += opt.value * q.weight;
+      const weighted = opt.value * q.weight;
+      totalScore += weighted;
+
+      answers.push({
+        question: q.text,
+        answer: opt.label,
+        score: Math.round(weighted)
+      });
+
       index++;
-      if (index < questions.length) loadQuestion();
-      else showResult();
+      index < questions.length ? loadQuestion() : showResult();
     };
     choicesEl.appendChild(btn);
   });
@@ -207,20 +191,21 @@ function loadQuestion() {
 function showResult() {
   progressBar.style.width = "100%";
 
-  const finalScore = Math.round(score);
+  const finalScore = Math.round(totalScore);
   localStorage.setItem("scoreDigital", finalScore);
+  localStorage.setItem("answersDigital", JSON.stringify(answers));
 
-  let message = finalScore <= 40
-    ? "🟥 Maturité digitale faible – transformation prioritaire."
-    : finalScore <= 70
-    ? "🟧 Digitalisation intermédiaire – potentiel à exploiter."
-    : "🟩 Organisation digitalement performante.";
+  let message =
+    finalScore < 30
+      ? "🟥 Maturité digitale faible – transformation prioritaire."
+      : finalScore < 70
+      ? "🟧 Digitalisation intermédiaire – potentiel à exploiter."
+      : "🟩 Organisation digitalement performante.";
 
   questionEl.style.display = "none";
   choicesEl.style.display = "none";
   counter.style.display = "none";
 
-  resultEl.style.display = "block";
   resultEl.innerHTML = `
     <h2>${message}</h2>
     <p><strong>Score Digital :</strong> ${finalScore} / 100</p>
@@ -235,11 +220,11 @@ function showResult() {
 
   timerEl.style.display = "block";
   let timeLeft = 4;
+  countdownEl.textContent = timeLeft;
 
   const interval = setInterval(() => {
     timeLeft--;
-    countdownEl.innerText = timeLeft;
-
+    countdownEl.textContent = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(interval);
       window.location.href = "credit.html";
@@ -252,8 +237,3 @@ loadQuestion();
 
 </body>
 </html>
-
-
-
-
-
