--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -92,9 +92,9 @@ footer {
   margin-top: 30px;
 }
 </style>
-  <script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 </head>
 
 <body>
@@ -108,52 +108,60 @@ footer {
 
 <div class="card">
 
-<div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-<div class="counter" id="counter"></div>
+  <div class="progress">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
 
-<div class="question" id="question"></div>
-<div id="choices"></div>
+  <div class="counter" id="counter"></div>
 
-<div id="result"></div>
+  <div class="question" id="question"></div>
+  <div id="choices"></div>
+
+  <div id="result"></div>
 
 </div>
 
 <div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
-  Passage à la <strong>synthèse finale</strong> dans <strong><span id="countdown">4</span>s</strong>…
+  Passage à la <strong>synthèse finale</strong> dans
+  <strong><span id="countdown">4</span>s</strong>…
 </div>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#6c5ce7;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
+<a href="../index.html"
+   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#6c5ce7;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+← Retour à l'accueil
+</a>
 </footer>
 
 </main>
 
 <script>
 const questions = [
-  { 
+  {
     text: "Vos collaborateurs sont-ils formés et sensibilisés aux risques cyber (phishing, mots de passe, e-mails) ?",
-    weight: 30 
+    weight: 30
   },
-  { 
+  {
     text: "Utilisez-vous des mots de passe robustes et une authentification à deux facteurs pour les accès sensibles ?",
-    weight: 20 
+    weight: 20
   },
-  { 
+  {
     text: "Vos systèmes sont-ils protégés par des antivirus, pare-feu et mises à jour régulières ?",
-    weight: 20 
+    weight: 20
   },
-  { 
+  {
     text: "Effectuez-vous des sauvegardes automatiques, sécurisées et testées de vos données ?",
-    weight: 15 
+    weight: 15
   },
-  { 
+  {
     text: "Disposez-vous d’un plan de réponse aux incidents cyber avec des responsabilités clairement définies ?",
-    weight: 15 
+    weight: 15
   }
 ];
 
 let index = 0;
-let score = 0;
+let totalScore = 0;
+let answers = [];
 
 const questionEl = document.getElementById("question");
 const choicesEl = document.getElementById("choices");
@@ -163,8 +171,8 @@ const resultEl = document.getElementById("result");
 
 function loadQuestion() {
   const q = questions[index];
-  questionEl.innerText = q.text;
-  counter.innerText = `Question ${index + 1} / ${questions.length}`;
+  questionEl.textContent = q.text;
+  counter.textContent = `Question ${index + 1} / ${questions.length}`;
   progressBar.style.width = `${(index / questions.length) * 100}%`;
   choicesEl.innerHTML = "";
 
@@ -175,12 +183,19 @@ function loadQuestion() {
   ].forEach(opt => {
     const btn = document.createElement("button");
     btn.className = "choice";
-    btn.innerText = opt.label;
+    btn.textContent = opt.label;
     btn.onclick = () => {
-      score += opt.value * q.weight;
+      const weighted = opt.value * q.weight;
+      totalScore += weighted;
+
+      answers.push({
+        question: q.text,
+        answer: opt.label,
+        score: Math.round(weighted)
+      });
+
       index++;
-      if (index < questions.length) loadQuestion();
-      else showResult();
+      index < questions.length ? loadQuestion() : showResult();
     };
     choicesEl.appendChild(btn);
   });
@@ -189,20 +204,21 @@ function loadQuestion() {
 function showResult() {
   progressBar.style.width = "100%";
 
-  const finalScore = Math.round(score);
+  const finalScore = Math.round(totalScore);
   localStorage.setItem("scoreCyber", finalScore);
+  localStorage.setItem("answersCyber", JSON.stringify(answers));
 
-  let message = finalScore < 40
-    ? "🟥 Cybersécurité faible – exposition élevée au risque de piratage."
-    : finalScore < 70
-    ? "🟧 Cybersécurité intermédiaire – vulnérabilités à corriger."
-    : "🟩 Cybersécurité solide – vigilance et amélioration continue.";
+  let message =
+    finalScore < 30
+      ? "🟥 Cybersécurité faible – exposition élevée au risque de piratage."
+      : finalScore < 70
+      ? "🟧 Cybersécurité intermédiaire – vulnérabilités à corriger."
+      : "🟩 Cybersécurité solide – vigilance et amélioration continue.";
 
   questionEl.style.display = "none";
   choicesEl.style.display = "none";
   counter.style.display = "none";
 
-  resultEl.style.display = "block";
   resultEl.innerHTML = `
     <h2>${message}</h2>
     <p><strong>Score Cybersécurité :</strong> ${finalScore} / 100</p>
@@ -217,13 +233,14 @@ function showResult() {
 
   timerEl.style.display = "block";
   let timeLeft = 4;
+  countdownEl.textContent = timeLeft;
 
   const interval = setInterval(() => {
     timeLeft--;
-    countdownEl.innerText = timeLeft;
+    countdownEl.textContent = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(interval);
-      window.location.href = "https://master-metrics.vercel.app/synthese.html";
+      window.location.href = "synthese.html";
     }
   }, 1000);
 }
@@ -233,7 +250,3 @@ loadQuestion();
 
 </body>
 </html>
-
-
-
-
