--- a/site/synthese.html
+++ b/site/synthese.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Votre Synthèse – Master Your Metrics</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
@@ -127,6 +128,11 @@ main {
   color: white;
   border: none;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+#contact-form button:hover {
+  background-color: #005fa3;
 }
 
 .calendar-btn {
@@ -143,6 +149,10 @@ main {
   font-weight: bold;
 }
 
+.calendar-btn:hover {
+  background-color: #218838;
+}
+
 footer {
   text-align: center;
   padding: 30px;
@@ -150,9 +160,9 @@ footer {
   color: #666;
 }
 </style>
-  <script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 </head>
 
 <body>
@@ -169,11 +179,30 @@ footer {
 
 <div id="generalScore" class="score-global"></div>
 
-<div class="bar-block"><div class="bar-label">🌱 ESG</div><div class="bar-bg"><div id="barESG" class="bar-fill" style="background:#2ECC40"></div></div></div>
-<div class="bar-block"><div class="bar-label">💼 AML</div><div class="bar-bg"><div id="barAML" class="bar-fill" style="background:#FF851B"></div></div></div>
-<div class="bar-block"><div class="bar-label">💻 Digitalisation</div><div class="bar-bg"><div id="barDigital" class="bar-fill" style="background:#7FDBFF"></div></div></div>
-<div class="bar-block"><div class="bar-label">📊 Crédit</div><div class="bar-bg"><div id="barCredit" class="bar-fill" style="background:#B10DC9"></div></div></div>
-<div class="bar-block"><div class="bar-label">🔐 Cybersécurité</div><div class="bar-bg"><div id="barCyber" class="bar-fill" style="background:#FF4136"></div></div></div>
+<div class="bar-block">
+  <div class="bar-label">🌱 ESG</div>
+  <div class="bar-bg"><div id="barESG" class="bar-fill" style="background:#2ECC40"></div></div>
+</div>
+
+<div class="bar-block">
+  <div class="bar-label">💼 AML</div>
+  <div class="bar-bg"><div id="barAML" class="bar-fill" style="background:#FF851B"></div></div>
+</div>
+
+<div class="bar-block">
+  <div class="bar-label">💻 Digitalisation</div>
+  <div class="bar-bg"><div id="barDigital" class="bar-fill" style="background:#7FDBFF"></div></div>
+</div>
+
+<div class="bar-block">
+  <div class="bar-label">📊 Crédit</div>
+  <div class="bar-bg"><div id="barCredit" class="bar-fill" style="background:#B10DC9"></div></div>
+</div>
+
+<div class="bar-block">
+  <div class="bar-label">🔐 Cybersécurité</div>
+  <div class="bar-bg"><div id="barCyber" class="bar-fill" style="background:#FF4136"></div></div>
+</div>
 </div>
 
 <section id="contact-form">
@@ -182,7 +211,8 @@ footer {
 <button onclick="sendReport()">📨 Envoyer ma scorecard</button>
 
 <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
-   target="_blank" class="calendar-btn">
+   target="_blank" rel="noopener"
+   class="calendar-btn">
 📅 Réserver un entretien gratuit (30 min)
 </a>
 </section>
@@ -191,7 +221,8 @@ footer {
 <h2>Prêt à passer à l’action ?</h2>
 <p>Un échange de 30 minutes suffit pour transformer ce diagnostic en plan concret.</p>
 <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
-   target="_blank" class="cta-button">
+   target="_blank" rel="noopener"
+   class="cta-button">
 📅 Planifier mon entretien
 </a>
 </div>
@@ -204,12 +235,18 @@ footer {
 </main>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#0074D9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;"> Retour à l'accueil</a>
-  
- <p> © 2025 Master Your Metrics — Tous droits réservés </p>
+<a href="../index.html"
+   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#0074D9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+Retour à l'accueil
+</a>
+
+<p>© 2025 Master Your Metrics — Tous droits réservés</p>
 </footer>
 
 <script>
+/* =========================
+   1) RÉCUP SCORES
+========================= */
 const scores = {
   ESG: parseInt(localStorage.getItem('scoreESG')) || 0,
   AML: parseInt(localStorage.getItem('scoreAML')) || 0,
@@ -218,10 +255,14 @@ const scores = {
   Cyber: parseInt(localStorage.getItem('scoreCyber')) || 0
 };
 
+/* =========================
+   2) AFFICHAGE BARRES
+========================= */
 function displayBar(id, value) {
   const el = document.getElementById(id);
-  el.style.width = value + "%";
-  el.textContent = value + " / 100";
+  const safe = Math.max(0, Math.min(100, value));
+  el.style.width = safe + "%";
+  el.textContent = safe + " / 100";
 }
 
 displayBar("barESG", scores.ESG);
@@ -230,16 +271,78 @@ displayBar("barDigital", scores.Digital);
 displayBar("barCredit", scores.Credit);
 displayBar("barCyber", scores.Cyber);
 
-const globalScore =
-  Math.round((scores.ESG + scores.AML + scores.Digital + scores.Credit + scores.Cyber) / 5);
+/* =========================
+   3) SCORE GLOBAL + ÉTOILES
+========================= */
+const globalScore = Math.round(
+  (scores.ESG + scores.AML + scores.Digital + scores.Credit + scores.Cyber) / 5
+);
 
 document.getElementById("generalScore").innerHTML =
   "⭐".repeat(Math.round(globalScore / 20)) +
   "☆".repeat(5 - Math.round(globalScore / 20)) +
   `<div style="font-size:0.9em;margin-top:6px;">Score global : ${globalScore} / 100</div>`;
 
+/* =========================
+   4) RÉCUP RÉPONSES (JSON)
+   clés attendues :
+   - answersESG
+   - answersAML
+   - answersDigital
+   - answersCredit
+   - answersCyber
+========================= */
+function safeParse(key) {
+  try {
+    const raw = localStorage.getItem(key);
+    if (!raw) return [];
+    const parsed = JSON.parse(raw);
+    return Array.isArray(parsed) ? parsed : [];
+  } catch (e) {
+    return [];
+  }
+}
+
+const answersByDomain = {
+  ESG: safeParse("answersESG"),
+  AML: safeParse("answersAML"),
+  Digital: safeParse("answersDigital"),
+  Credit: safeParse("answersCredit"),
+  Cyber: safeParse("answersCyber")
+};
+
+function formatAnswers(domainName, items) {
+  if (!items || items.length === 0) {
+    return `\n${domainName} — Réponses non disponibles (ancienne version du questionnaire).\n`;
+  }
+  let out = `\n${domainName} — Détail des réponses\n`;
+  items.forEach((it, i) => {
+    const q = (it.question || "").trim();
+    const a = (it.answer || "").trim();
+    out += `${i + 1}. ${q}\n   → ${a}\n`;
+  });
+  return out;
+}
+
+/* =========================
+   5) INTERPRÉTATION GLOBALE
+========================= */
+function interpretGlobal(score) {
+  if (score < 30) return "🔴 Fondations à renforcer rapidement (priorités + plan d’action).";
+  if (score < 70) return "🟠 Niveau intermédiaire (gains rapides possibles en 30 jours).";
+  return "🟢 Niveau solide (optimisation + valorisation auprès clients/banques).";
+}
+
+/* =========================
+   6) ENVOI MAIL (mailto)
+   - inclut scores + réponses
+   - fallback si trop long
+========================= */
 function sendReport() {
-  const body = `
+  const recipient = "masteryourmetrics@gmail.com";
+  const subject = "🧭 Ma Scorecard – Master Your Metrics";
+
+  const header = `
 Bonjour,
 
 Voici ma scorecard Master Your Metrics :
@@ -251,23 +354,46 @@ Voici ma scorecard Master Your Metrics :
 🔐 Cybersécurité : ${scores.Cyber}/100
 
 ⭐ Score global : ${globalScore}/100
+${interpretGlobal(globalScore)}
 
 📅 Prendre rendez-vous :
 https://calendar.app.google/TWzExGsSew5rCkN77
 
+`.trim();
+
+  const details =
+    formatAnswers("🌱 ESG", answersByDomain.ESG) +
+    formatAnswers("💼 AML", answersByDomain.AML) +
+    formatAnswers("💻 Digitalisation", answersByDomain.Digital) +
+    formatAnswers("📊 Crédit", answersByDomain.Credit) +
+    formatAnswers("🔐 Cybersécurité", answersByDomain.Cyber);
+
+  const footer = `
 — Envoyé via Master Your Metrics
 `.trim();
 
-  window.location.href =
-    "mailto:masteryourmetrics@gmail.com?subject=" +
-    encodeURIComponent("🧭 Ma Scorecard – Master Your Metrics") +
-    "&body=" + encodeURIComponent(body);
+  // Corps complet souhaité
+  const fullBody = `${header}\n\n========================\nDÉTAIL DES RÉPONSES\n========================\n${details}\n${footer}`;
+
+  // Fallback si trop long (certaines apps mail coupent > ~2000-4000 chars)
+  const shortBody = `${header}\n\n(Détail des réponses indisponible dans ce mail : limitation technique du client mail.)\n\n${footer}`;
+
+  const tryOpen = (bodyText) => {
+    const url =
+      `mailto:${recipient}` +
+      `?subject=${encodeURIComponent(subject)}` +
+      `&body=${encodeURIComponent(bodyText)}`;
+    window.location.href = url;
+  };
+
+  // Seuil prudent pour éviter URL trop longue
+  if (fullBody.length > 3500) {
+    tryOpen(shortBody);
+  } else {
+    tryOpen(fullBody);
+  }
 }
 </script>
 
 </body>
 </html>
-
-
-
-
